# LabPulse

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Internship purchased items.xlsx  LICENSE  Open Source Roadmap.md  PROJECT_REVIEW.md  README.md  ROADMAP.md  config.yaml  edit_config.sh  generate_compose.sh  generate_homeassistant_config.sh  pyproject.toml  requirements-host.txt  setup_container_fs.sh  setup_usb_devices.py  simulate_serial.py  tmp_generator_extract.py  tmp_generator_extract_latest.py
3D printable parts/: README.txt  Tall boi With hole!.stl  mhm
Arduino/: Pressure_Arduino.cpp  Pump_Room_Arduino.cpp  full_water_sensor_code.cpp
Arduino code/: Arduino Instructions for TH sensor  Arduino Instructions for TH sensor.cpp  TH_sensor_code.cpp  TH_sensor_code.h  full_water_sensor_code.cpp
Arduino code/Compressed AIr sensor/: Arduino instructions for CA sensor.cpp  Pressure reader.cpp  pressurepub.py
Arduino code/Compressed Air sensor/: Calibration code for CA sensor.cpp
Arduino code/DHT sensor code/: Arduino Instructions for TH sensor.cpp  TH_sensor_code.cpp
Arduino code/Water Temp sensor code/: Arduino Instructions for WT sensor.cpp  WT_sensor_code.cpp  WT_sensor_code.h
Arduino code/Water flow meter code/: Arduino Instructions.cpp  Temporary flow reader.cpp  flowpub.py
Arduino/Water flow meter code/: WT_and_WF_sensor_code_for_P_sensor.cpp
Documentation/: Setup of a lab monitor on a raspberry pi.docx  ~$tup of a lab monitor on a raspberry pi.docx
Future_work/: README_FW.md  generalised_architecture.md  main.py  sensor_base.py  sensor_factory.py  update_config.py  update_config.yaml
Future_work/drivers/: serial_driver.py
General error detection code/: Multiple_sensor changes.py  Single_sensor_long_term_changes.py  Upper_lower_limits.py  WT and flow sensor error detection.py
Installation/: COMPATIBILITY.md  QUICKSTART.md  setup.sh
Raspberry Pi code/: phone_number_config.json  setup_homeassistant_313.sh  threshold_config_file.json  water_sensor.py
Raspberry Pi code/Config files and scripts/: modem-watchdog.sh
Raspberry Pi code/DHT monitoring code/: DHT publishing code.py  DHT_publishing_code.py
Raspberry Pi code/Python publishing scripts/: pressure_pub.py
Raspberry Pi code/Service Scripts/: dhtpub.service  power_monitor.service  pressure_monitor.service  pump_room_monitor.service  turbo_pump_monitor.service
Raspberry Pi code/UPS Monitoring code/: UPS Monitoring code.py  UPS_Monitoring_code.py
archive_v1_pi_code/Config files and scripts/: modem-watchdog.sh
archive_v1_pi_code/General error detection code/: Single_sensor_long_term_changes.py
deployment/: README.md  edit_config.sh  generate_compose.sh  generate_homeassistant_config.sh  setup_container_fs.sh
docker_refactor/: CONTAINER_SETUP.md  README.md  alarm_defaults.json  characterize_ups.sh  config.yaml  edit_config.sh  fake_sensor.py  generate_compose.sh  generate_homeassistant_config.sh  main.py  refactor_notes.md  setup_container_fs.sh  setup_usb_devices.py  simulate_arduinos.sh  simulate_serial.py
docker_refactor/docs/: ALARM_SETUP_LAYOUT_IMPLEMENTATION.md  ARCHITECTURE.md  ARDUINO_AND_CPP.md  ARDUINO_SERIAL_FORMATS.md  CODE_INTERNALS.md  CODE_READING_GUIDE.md  CONFIGURATION.md  CONTAINER_SETUP.md  CPP_REVIEW_NOTES.md  FUTURE_HARDWARE_USB_SETUP.md  FUTURE_HOME_ASSISTANT_DASHBOARD_API.md  FUTURE_POWER_MONITOR_IMPLEMENTATION.md  GENERALITY_AND_SIMPLIFICATION.md  HAPPY_PATH_SETUP.md  HARDWARE_AND_SERIAL.md  HOME_ASSISTANT_ALARM_STATE_MACHINE_V1.md  README.md  (+15 more)
docs/: ALARM_SETUP_LAYOUT_IMPLEMENTATION.md  ARCHITECTURE.md  ARDUINO_AND_CPP.md  CODE_INTERNALS.md  CONFIGURATION.md  DEVELOPMENT.md  DRIVER_DEVELOPMENT.md  HOME_ASSISTANT.md  HOME_ASSISTANT_RENDER_MODELS.md  HOME_ASSISTANT_YAML_DASHBOARD_REFACTOR.md  INSTALLATION.md  Internship purchased items.xlsx  LabPulse Sensors.xlsx  OPERATIONS.md  POWER_MONITOR_TEST_PI.md  PRODUCT_SCOPE.md  README.md  SERIAL_PROTOCOL.md  SETUP_AND_TROUBLESHOOTING.md  SMS.md  SOFTWARE_TODO.md  SUPPORT.md  TROUBLESHOOTING.md
firmware/: README.md  library.properties
legacy/: Arduino code Water Temperature Sensor calibration.py  LEGACY README.md
legacy/pi_scripts/: dhtpub.py  powerpub.py  pumproompub.py  pyproject.toml  requirements.txt  smstest.py  turbo_pump_monitor.py
legacy/pi_scripts/labpulse_common/: config.py  mqtt_health.py  utils.py
pi_scripts/: config.yaml  pressurepub.py  setup.sh  thresholds.json
testing/: test_common_contracts.py  test_control_cli.py  test_deployment_generation.py  test_dht11_driver.py  test_doctor.py  test_firmware_layout.py  test_hardware_factory.py  test_hardware_runner.py  test_homeassistant_entities.py  test_homeassistant_generator.py  test_homeassistant_publisher.py  test_notification_context.py  test_packaging.py  test_power_monitor.py  test_serial_driver.py  test_serial_parser.py  test_setup_grouping.py  test_simulate_serial.py  test_sms_container.py  test_usb_setup.py  test_x1200_ups_driver.py  test_yaml_dashboard.py  ups_test_pi_config.yaml
tmp_ha_config_test6/: configuration.yaml  labpulse_alarm_cards.yaml
tmp_ha_registry_test/: labpulse_alarm_cards.yaml
tmp_ha_registry_test2/: configuration.yaml  labpulse_alarm_cards.yaml
(+226 files in other folders)
