[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "labpulse"
version = "0.1.0"
description = "Raspberry Pi laboratory infrastructure monitoring with Home Assistant and MQTT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "LabPulse contributors" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "paho-mqtt>=2,<3",
  "pydantic>=2,<3",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
serial = ["pyserial>=3.5,<4"]
x1200 = ["smbus2>=0.5,<1"]
dht11 = [
  "adafruit-blinka>=8,<9",
  "adafruit-circuitpython-dht>=4,<5",
  "lgpio>=0.2,<1",
]
dev = [
  "build>=1,<2",
]

[project.scripts]
labpulse = "labpulse.control:main"
labpulse-up = "labpulse.control:up_main"
labpulse-down = "labpulse.control:down_main"
labpulse-restart = "labpulse.control:restart_main"
labpulse-ps = "labpulse.control:ps_main"
labpulse-logs = "labpulse.control:logs_main"
labpulse-config = "labpulse.control:config_main"
labpulse-open = "labpulse.control:open_main"
labpulse-setup = "labpulse.installer:main"

[project.urls]
Repository = "https://github.com/Tommystorm-cpu/LabPulse"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["labpulse*"]

[tool.setuptools.package-data]
"labpulse.common" = ["*.yaml"]
"labpulse.homeassistant" = [
  "templates/*/*.yaml",
  "templates/*/*.j2",
]

[tool.setuptools.data-files]
"share/labpulse" = [
  "config.yaml",
  "requirements-host.txt",
  "setup_usb_devices.py",
  "simulate_serial.py",
]
"share/labpulse/deployment" = [
  "deployment/edit_config.sh",
  "deployment/generate_compose.sh",
  "deployment/generate_homeassistant_config.sh",
  "deployment/setup_container_fs.sh",
]
